Fixed overflow issue in projects container

--- a/src/component/projects/_projects.scss
+++ b/src/component/projects/_projects.scss
@@ -6,6 +6,7 @@
   float: left;
   background: $wht-prim;
   padding-top: 8vh;
+  overflow: hidden;
 
   h5 {
     float: left;
